<?xml version="1.0"?>
<package format="2">
  <name>head_control</name>
  <version>1.0.0</version>
  <description>The head_control_node package</description>

  <maintainer email="sleepyserver6@gmail.com">Philip Hopley</maintainer>

  <license>BSD</license>

  <author email="sleepyserver6@gmail.com">Philip Hopley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>servo_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation></build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>servo_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>servo_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>

</package>
