<?xml version="1.0"?>
<package format="2">
  <name>head_control</name>
  <version>2.1.0</version>
  <description>The head_control_node package</description>

  <maintainer email="sleepyserver6@gmail.com">Philip Hopley</maintainer>

  <license>Apache 2</license>

  <author email="sleepyserver6@gmail.com">Philip Hopley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>servo_msgs</depend>
  <depend>std_msgs</depend>
  
  <build_depend>message_generation></build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>

</package>
